<resources>
    <string name="app_name">VendingMacineKata-Android</string>
    <string name="chips">Chips</string>
    <string name="cola">Cola</string>
    <string name="candy">Candy</string>
    <string name="exact_change_only">EXACT CHANGE ONLY</string>
    <string name="zero_dollars">$0.00</string>
    <string name="take_change">Take Change</string>
    <string name="exact_change">Exact Change</string>
    <string name="sold_out">Sold Out</string>
    <string name="coin_return">Coin Return</string>
</resources>
